frontend-reader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reader-deployment
  namespace: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reader
  template:
    metadata:
      labels:
        app: reader
    spec:
      volumes:
      - name: html
        persistentVolumeClaim:
          claimName: nginx-html-pvc
      containers:
      - name: reader
        image: harbor.home.virtualelephant.com/kubernetes/reader:latest
        volumeMounts:
        - name: html
          mountPath: "/usr/share/nginx/html"
