backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.9.7  # Replace with the desired RabbitMQ image and version
        ports:
        - containerPort: 5672
        - containerPort: 15672  # Optional: For RabbitMQ management UI
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
    - protocol: TCP
      port: 15672  # Optional: For RabbitMQ management UI
      targetPort: 15672
