frontend-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: frontend-nginx
  namespace: sample-app
  labels:
    app: frontend
spec:
  virtualhost:
    fqdn: nginx.home.virtualelephant.com
  routes:
    - services:
      - name: nginx-service
        port: 80
