rabbitmq-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  virtualhost:
    fqdn: rabbitmq.home.virtualelephant.com
  routes:
    - services:
      - name: rabbitmq
        port: 15672
